
if compile_filter_KARBON
KARBONDIR = karbon
endif

if include_XSLTFILTERS
XSLTFILTERDIR = xsltfilter
endif

if compile_filter_KWORD
KWORDDIR = kword
endif

if compile_filter_KPRESENTER
KPRESENTERDIR = kpresenter
endif

if compile_filter_KSPREAD
KSPREADDIR = kspread
endif

if compile_filter_KFORMULA
KFORMULADIR = kformula
endif

if compile_filter_KUGAR
KUGARDIR = kugar
endif



SUBDIRS = generic_wrapper liboofilter $(KSPREADDIR) $(KWORDDIR) $(KPRESENTERDIR) olefilters $(XSLTFILTERDIR) $(KFORMULADIR) $(KARBONDIR) $(KUGARDIR)
